# kafka-test-argo

./: .gitignore  README.md  build-with-azure.sh  create-acr-pull-secret.sh  docker-compose.yaml  kafka-test-app.yaml  kafka-test-pod.yaml  kafka_jaas.conf
docker/: Dockerfile  topic-test.sh
helm-e2e-tests/: Chart.yaml  values.yaml
helm-e2e-tests/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-e2e-tests/templates/tests/: test-connection.yaml
kafka-test-manifests/: Dockerfile  Dockerfile-python  Dockerfile-python-cp-fast  kafka-client.config.yaml  kafka-load-test-job.yaml  kafka-scenario-test-job-python.yaml  kafka-test-app.yaml  kafka-test-job.yaml  topic-test.sh
scripts/: kafka-test-modular.sh
scripts/kafka-test-modules/: kafka-load-utils.sh  kafka-perf-utils.sh  kafka-report-utils.sh  kafka-test-utils.sh  kafka-topic-utils.sh
scripts/kafka-test-py/: README.md  __init__.py  cli.py  pyproject.toml  setup.py
scripts/kafka-test-py/core/: models.py
scripts/kafka-test-py/scenarios/: __init__.py  cli_runner.py  python_runner.py
scripts/kafka-test-py/tests/: test_config.py  test_models.py
scripts/kafka-test-py/utils/: config.py  topic.py
